--- a/css/layout-content/03_services.sass
+++ b/css/layout-content/03_services.sass
@@ -1,7 +1,7 @@
 // *************************************
 //
 //  Digifab.hk
-//  layout-content/services.sass
+//  layout-content/03_services.sass
 //
 //  Written by Denis Tsoi as part of Digifab.hk
 //  In Collaboration with Eric Tsoi for Digifab.hk
