--- a/css/layout-content/09_blog.sass
+++ b/css/layout-content/09_blog.sass
@@ -1,7 +1,7 @@
 // *************************************
 //
 //  Digifab.hk
-//  layout-content/06_attention.sass
+//  layout-content/09_blog.sass
 //
 //  Written by Denis Tsoi as part of Digifab.hk
 //  In Collaboration with Eric Tsoi for Digifab.hk
