--- a/css/layout-content/_style.sass
+++ b/css/layout-content/_style.sass
@@ -15,41 +15,41 @@
 //
 // *************************************
 
-// -- 1. settings -- //
+// -- Import Layout for Article Sizes -- //
 @import "_settings_layout"
 
-// -- 1. Header -- //
+// -- 01. Header -- //
 @import "01_header"
 
-// -- 1. Main-Title -- //
+// -- 02. Main-Title -- //
 @import "02_main-title"
 
-// -- 1. Services -- //
+// -- 03. Services -- //
 @import "03_services"
 
-// -- 1. Services -- //
+// -- 04. Aim -- //
 @import "04_aim"
 
-// -- 1. Services -- //
+// -- 05. What to Print -- //
 @import "05_what-print"
 
-// -- 1. Services -- //
+// -- 06. Need to Print -- //
 @import "06_need-print"
 
-// -- 1. Services -- //
+// -- 07. Attention -- //
 @import "07_attention"
 
-// -- 1. Services -- //
-//@import "08_about"
+// -- 08. About -- //
+@import "08_about"
 
-// -- 1. Services -- //
-@import "09_blog"
+// -- 09. Blog -- //
+// @import "09_blog"
 
-// -- 1. Services -- //
+// -- 10. Contact us -- //
 @import "10_contact"
 
-// -- 1. Services -- //
+// -- 10. Footer -- //
 // @import "11_footer"
 
-// -- 1. Services -- //
+// -- 12. Responsive -- //
 @import "12_responsive"
