--- a/css/main.css
+++ b/css/main.css
@@ -196,9 +196,9 @@ table {
 
 @font-face {
   font-family: "Open Sans";
-  src: url("../fonts/open-sans/OpenSans-regular.ttf");
+  src: url("../fonts/open-sans/OpenSans-Regular.ttf");
   src: local("Open Sans");
-  src: url("../fonts/open-sans/OpenSans-regular.ttf") format("truetype"); }
+  src: url("../fonts/open-sans/OpenSans-Regular.ttf") format("truetype"); }
 
 @font-face {
   font-family: "Open Sans Bold";
@@ -245,7 +245,7 @@ h1 {
   margin: 0 auto; }
 
 main.container {
-  /*background: url($path-images+'Digifab-1024-Recovered.png') */
+  /*background: url($path-images+'Digifab.png') */
   height: 3543px;
   width: 1024px;
   background-position-y: -15px; }
@@ -454,7 +454,7 @@ footer section.footer-bottom {
   .main-title {
     background-size: 100% 540px; } }
 main.container {
-  /*background: url($path-images+'Digifab-1024-Recovered.png') */
+  /*background: url($path-images+'Digifab.png') */
   height: 3543px;
   width: 1024px;
   background-position-y: -15px; }
