--- a/css/core/settings.sass
+++ b/css/core/settings.sass
@@ -26,9 +26,12 @@ $base-width-px: 1024px
 
 $dark-blue:   #1b1d32
 $dark-green:  #339967
+$dark-grey: 	#474747
+
 
 $light-blue:  #6981b1
 $light-green: #35cc68
+$light-grey:  #787878
 
 
 // -- Font -- //
