--- a/css/layout-content/_style.sass
+++ b/css/layout-content/_style.sass
@@ -48,8 +48,8 @@
 // -- 10. Contact us -- //
 @import "10_contact"
 
-// -- 10. Footer -- //
-// @import "11_footer"
+// -- 11. Footer -- //
+@import "11_footer"
 
 // -- 12. Responsive -- //
 @import "12_responsive"
