correct font-family - comment bg

--- a/css/core/settings.sass
+++ b/css/core/settings.sass
@@ -36,7 +36,7 @@ $light-grey:  #787878
 
 // -- Font -- //
 $base-font: 'Open Sans'
-$base-font-filename: 'OpenSans-regular.ttf'
+$base-font-filename: 'OpenSans-Regular.ttf'
 
 $base-font-bold: 'Open Sans Bold'
 $base-font-bold-filename: 'OpenSans-Bold.ttf'
