--- a/css/layout-content/_settings_layout.sass
+++ b/css/layout-content/_settings_layout.sass
@@ -26,7 +26,7 @@ $blog-height:       570px
 $contact-height:    720px
 
 main.container
-  background: url($path-images+'Digifab.png')
+  /*background: url('../img/Digifab.png')*/
   height: 3543px
   width: 1024px
   background-position-y: -15px
