--- a/css/core/settings.sass
+++ b/css/core/settings.sass
@@ -24,14 +24,23 @@ $base-width-px: 1024px
 
 // -- Color -- //
 
-$dark-blue:   #1b1d32
-$dark-green:  #339967
-$dark-grey: 	#474747
+$dark-blue:       #1b1d32
+$dark-green:      #339966
+$dark-grey:       #474747
 
 
-$light-blue:  #6981b1
-$light-green: #35cc68
-$light-grey:  #787878
+$light-blue:      #6981b1
+$light-green:     #33cc66
+$light-grey:      #787878
+
+$alt-light-grey:  #e6e6e6
+$alt-dark-grey:   #787878
+$alt-grey-font:   #a09fa0
+
+$alt-fb-blue:     #758ab6
+$alt-tw-blue:     #71c7e6
+$alt-g-red:       #d87b71
+
 
 
 // -- Font -- //
@@ -51,32 +60,32 @@ $second-font-filename: 'BebasNeue.otf'
 // TODO Make into Mixin
 // -- Open Sans -- //
 @font-face
-	font-family: $base-font
-	src: url($path-fonts-opensans + $base-font-filename)
-	src: local($base-font)
-	src: url($path-fonts-opensans + $base-font-filename) format('truetype')
+  font-family: $base-font
+  src: url($path-fonts-opensans + $base-font-filename)
+  src: local($base-font)
+  src: url($path-fonts-opensans + $base-font-filename) format('truetype')
 
 // Open Sans Bold
 @font-face
-	font-family: $base-font-bold
-	src: url($path-fonts-opensans + $base-font-bold-filename)
-	src: local($base-font-bold)
-	src: url($path-fonts-opensans + $base-font-bold-filename) format('truetype')
+  font-family: $base-font-bold
+  src: url($path-fonts-opensans + $base-font-bold-filename)
+  src: local($base-font-bold)
+  src: url($path-fonts-opensans + $base-font-bold-filename) format('truetype')
 
 // Open Sans BoldItalic
 @font-face
-	font-family: $base-font-bold-italic
-	src: url($path-fonts-opensans + $base-font-bold-italic-filename)
-	src: local($base-font-bold-italic)
-	src: url($path-fonts-opensans + $base-font-bold-italic-filename) format('truetype')
+  font-family: $base-font-bold-italic
+  src: url($path-fonts-opensans + $base-font-bold-italic-filename)
+  src: local($base-font-bold-italic)
+  src: url($path-fonts-opensans + $base-font-bold-italic-filename) format('truetype')
 
 
 // BebasNeue
 @font-face
-	font-family: $second-font
-	src: url($path-fonts-bebas + $second-font-filename)
-	src: local($second-font)
-	src: url($path-fonts-bebas + $second-font-filename) format('opentype')
+  font-family: $second-font
+  src: url($path-fonts-bebas + $second-font-filename)
+  src: local($second-font)
+  src: url($path-fonts-bebas + $second-font-filename) format('opentype')
 
 
 
