--- a/css/layout-content/04_aim.sass
+++ b/css/layout-content/04_aim.sass
@@ -10,7 +10,14 @@
 
 .aims
   padding: 40px 110px
+  background-image: url($path-images + 'aim.png')
+  background-repeat: no-repeat
+  background-position: 53% 20%
+  background-size: 66%
 
+
+  max-width: 1024px
+  margin: 0 auto
   .col-3
     // display: inline-block
     width: calc(100% / 3)
