--- a/css/layout-content/05_what-print.sass
+++ b/css/layout-content/05_what-print.sass
@@ -9,13 +9,16 @@
 // *************************************
 
 .what-print
-	h2
-		margin: 0 auto
-		font-size: 2.5em
-		font-family: "bebaeNeue"
-		text-align: center
-	p
-		text-align: center
-		color: blue
-		font-size: 1.25em
-		margin-top: .6em
+  background-image: url($path-images + 'what.png')
+  background-repeat: no-repeat
+  background-position: 50% 90%
+  h2
+    margin: 0 auto
+    font-size: 2.5em
+    font-family: "bebaeNeue"
+    text-align: center
+  p
+    text-align: center
+    // color: blue
+    font-size: 1.25em
+    margin-top: .6em
