--- a/css/layout-content/08_about.sass
+++ b/css/layout-content/08_about.sass
@@ -7,3 +7,42 @@
 //  In Collaboration with Eric Tsoi for Digifab.hk
 //
 // *************************************
+
+.about
+  padding-top: 36px
+  display: none
+  .title
+    font-family: $second-font
+    font-size: 2.5em
+    text-align: center
+
+    height: 96px
+    width: 800px
+    border-bottom: solid 1px rgba(0,0,0,.3)
+
+  h3
+    font-family: $second-font
+  
+  .skills,
+  .who
+    float: left
+    display: block
+    width: 442px
+    height: 190px
+    padding: 25px
+    +box
+
+    visibility: hidden
+
+  .team
+    clear: both
+    padding: 10px 25px
+    +box
+    h3
+      font-size: 1.5em
+      margin: 0
+
+    .eric, .denis
+      width: 50%
+      height: 140px
+      float: left
