--- a/css/layout-content/_settings_layout.sass
+++ b/css/layout-content/_settings_layout.sass
@@ -26,10 +26,10 @@ $blog-height:       570px
 $contact-height:    720px
 
 main.container
-  /*background: url('../img/Digifab.png')*/
-  height: 3543px
+  // height: 3543px
   width: 1024px
   background-position-y: -15px
+  // background: url('../img/Digifab.png')
 
 article
   display: block
