--- a/css/layout-content/01_header.sass
+++ b/css/layout-content/01_header.sass
@@ -29,6 +29,11 @@ header
     width: 100px
     margin-left: 14px
     left: $default-margin
+    a
+      font-size: 2.5em
+      letter-spacing: 3px
+      margin-top: 4px
+      display: block
 
   .menu
     position: absolute
