--- a/css/layout-content/06_need-print.sass
+++ b/css/layout-content/06_need-print.sass
@@ -9,4 +9,16 @@
 // *************************************
 
 .need-print
-	padding-top: 0
+  padding-top: 0
+  background-image: url($path-images + 'need.png')
+  background-repeat: no-repeat
+  background-position: 50%
+  .detail
+    position: relative
+    text-align: center
+    padding-top: 305px
+    h2
+      display: inline-block
+    span
+      font-family: $base-font-bold
+      font-style: italic
