--- a/css/layout-content/07_attention.sass
+++ b/css/layout-content/07_attention.sass
@@ -31,6 +31,7 @@
     padding: 10px
     text-align: center
   span:first-of-type
+    display: none
     width: 200px
     background: $light-green
   span:last-of-type
