--- a/css/layout-content/10_contact.sass
+++ b/css/layout-content/10_contact.sass
@@ -8,13 +8,19 @@
 //
 // *************************************
 
-.about
-	padding-top: 36px
-	.title
-		font-family: $second-font
-		font-size: 2.5em
-		text-align: center
+.contact
+  display: none
+  padding-top: 36px
+  .contact-us
+    height: 96px
+    width: 800px
+    border-bottom: solid 1px rgba(0,0,0,.3)  
+  .title
+    font-family: $second-font
+    font-size: 2.5em
+    text-align: center
+    margin-bottom: 0
+  .detail
+    text-align: center
+    color: white
 
-		height: 96px
-		width: 800px
-		border-bottom: solid 1px rgba(0,0,0,.3)
