--- a/css/main.css
+++ b/css/main.css
@@ -245,8 +245,6 @@ h1 {
   margin: 0 auto; }
 
 main.container {
-  /*background: url('../img/Digifab.png') */
-  height: 3543px;
   width: 1024px;
   background-position-y: -15px; }
 
@@ -293,6 +291,11 @@ header {
     width: 100px;
     margin-left: 14px;
     left: 70px; }
+    header .logo a {
+      font-size: 2.5em;
+      letter-spacing: 3px;
+      margin-top: 4px;
+      display: block; }
   header .menu {
     position: absolute;
     right: 70px;
@@ -315,7 +318,7 @@ header {
   background-repeat-y: no-repeat;
   background-position-y: 40px;
   padding: 0 70px;
-  border-bottom: 8px solid #35cc68; }
+  border-bottom: 8px solid #33cc66; }
   .main-title section.container {
     background: rgba(0, 0, 0, 0.3);
     width: 460px;
@@ -348,10 +351,10 @@ header {
         text-align: center; }
       .main-title section.container .signup span:first-of-type {
         width: 200px;
-        background: #35cc68; }
+        background: #33cc66; }
       .main-title section.container .signup span:last-of-type {
         width: 100px;
-        background: #339967; }
+        background: #339966; }
       .main-title section.container .signup span:hover {
         background: red; }
 
@@ -373,7 +376,13 @@ header {
       text-decoration: none; }
 
 .aims {
-  padding: 40px 110px; }
+  padding: 40px 110px;
+  background-image: url("../img/aim.png");
+  background-repeat: no-repeat;
+  background-position: 53% 20%;
+  background-size: 66%;
+  max-width: 1024px;
+  margin: 0 auto; }
   .aims .col-3 {
     width: calc(100% / 3);
     height: 252px;
@@ -387,19 +396,34 @@ header {
     .aims .col-3 .logo {
       height: 74px; }
 
-.what-print h2 {
-  margin: 0 auto;
-  font-size: 2.5em;
-  font-family: "bebaeNeue";
-  text-align: center; }
-.what-print p {
-  text-align: center;
-  color: blue;
-  font-size: 1.25em;
-  margin-top: 0.6em; }
+.what-print {
+  background-image: url("../img/what.png");
+  background-repeat: no-repeat;
+  background-position: 50% 90%; }
+  .what-print h2 {
+    margin: 0 auto;
+    font-size: 2.5em;
+    font-family: "bebaeNeue";
+    text-align: center; }
+  .what-print p {
+    text-align: center;
+    font-size: 1.25em;
+    margin-top: 0.6em; }
 
 .need-print {
-  padding-top: 0; }
+  padding-top: 0;
+  background-image: url("../img/need.png");
+  background-repeat: no-repeat;
+  background-position: 50%; }
+  .need-print .detail {
+    position: relative;
+    text-align: center;
+    padding-top: 305px; }
+    .need-print .detail h2 {
+      display: inline-block; }
+    .need-print .detail span {
+      font-family: "Open Sans Bold";
+      font-style: italic; }
 
 .attention {
   color: white;
@@ -422,17 +446,19 @@ header {
     padding: 10px;
     text-align: center; }
   .attention span:first-of-type {
+    display: none;
     width: 200px;
-    background: #35cc68; }
+    background: #33cc66; }
   .attention span:last-of-type {
     width: 100px;
     margin-left: -6px;
-    background: #339967; }
+    background: #339966; }
   .attention span:hover {
     background: red; }
 
 .about {
-  padding-top: 36px; }
+  padding-top: 36px;
+  display: none; }
   .about .title {
     font-family: "BebaeNeue";
     font-size: 2.5em;
@@ -440,12 +466,62 @@ header {
     height: 96px;
     width: 800px;
     border-bottom: solid 1px rgba(0, 0, 0, 0.3); }
+  .about h3 {
+    font-family: "BebaeNeue"; }
+  .about .skills,
+  .about .who {
+    float: left;
+    display: block;
+    width: 442px;
+    height: 190px;
+    padding: 25px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    visibility: hidden; }
+  .about .team {
+    clear: both;
+    padding: 10px 25px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box; }
+    .about .team h3 {
+      font-size: 1.5em;
+      margin: 0; }
+    .about .team .eric, .about .team .denis {
+      width: 50%;
+      height: 140px;
+      float: left; }
+
+.contact {
+  display: none;
+  padding-top: 36px; }
+  .contact .contact-us {
+    height: 96px;
+    width: 800px;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.3); }
+  .contact .title {
+    font-family: "BebaeNeue";
+    font-size: 2.5em;
+    text-align: center;
+    margin-bottom: 0; }
+  .contact .detail {
+    text-align: center;
+    color: white; }
 
 footer {
-  background: #35cc68;
+  background: #33cc66;
   padding-left: 100px; }
   footer .content {
     display: inline-block; }
+    footer .content a {
+      text-decoration: none; }
+      footer .content a:visited, footer .content a:active {
+        color: inherit; }
 
 @media screen and (min-width: 1025px) {
   main.container {
@@ -454,8 +530,6 @@ footer {
   .main-title {
     background-size: 100% 540px; } }
 main.container {
-  /*background: url('../img/Digifab.png') */
-  height: 3543px;
   width: 1024px;
   background-position-y: -15px; }
 
@@ -502,6 +576,11 @@ header {
     width: 100px;
     margin-left: 14px;
     left: 70px; }
+    header .logo a {
+      font-size: 2.5em;
+      letter-spacing: 3px;
+      margin-top: 4px;
+      display: block; }
   header .menu {
     position: absolute;
     right: 70px;
@@ -524,7 +603,7 @@ header {
   background-repeat-y: no-repeat;
   background-position-y: 40px;
   padding: 0 70px;
-  border-bottom: 8px solid #35cc68; }
+  border-bottom: 8px solid #33cc66; }
   .main-title section.container {
     background: rgba(0, 0, 0, 0.3);
     width: 460px;
@@ -557,10 +636,10 @@ header {
         text-align: center; }
       .main-title section.container .signup span:first-of-type {
         width: 200px;
-        background: #35cc68; }
+        background: #33cc66; }
       .main-title section.container .signup span:last-of-type {
         width: 100px;
-        background: #339967; }
+        background: #339966; }
       .main-title section.container .signup span:hover {
         background: red; }
 
@@ -582,7 +661,13 @@ header {
       text-decoration: none; }
 
 .aims {
-  padding: 40px 110px; }
+  padding: 40px 110px;
+  background-image: url("../img/aim.png");
+  background-repeat: no-repeat;
+  background-position: 53% 20%;
+  background-size: 66%;
+  max-width: 1024px;
+  margin: 0 auto; }
   .aims .col-3 {
     width: calc(100% / 3);
     height: 252px;
@@ -596,19 +681,34 @@ header {
     .aims .col-3 .logo {
       height: 74px; }
 
-.what-print h2 {
-  margin: 0 auto;
-  font-size: 2.5em;
-  font-family: "bebaeNeue";
-  text-align: center; }
-.what-print p {
-  text-align: center;
-  color: blue;
-  font-size: 1.25em;
-  margin-top: 0.6em; }
+.what-print {
+  background-image: url("../img/what.png");
+  background-repeat: no-repeat;
+  background-position: 50% 90%; }
+  .what-print h2 {
+    margin: 0 auto;
+    font-size: 2.5em;
+    font-family: "bebaeNeue";
+    text-align: center; }
+  .what-print p {
+    text-align: center;
+    font-size: 1.25em;
+    margin-top: 0.6em; }
 
 .need-print {
-  padding-top: 0; }
+  padding-top: 0;
+  background-image: url("../img/need.png");
+  background-repeat: no-repeat;
+  background-position: 50%; }
+  .need-print .detail {
+    position: relative;
+    text-align: center;
+    padding-top: 305px; }
+    .need-print .detail h2 {
+      display: inline-block; }
+    .need-print .detail span {
+      font-family: "Open Sans Bold";
+      font-style: italic; }
 
 .attention {
   color: white;
@@ -631,17 +731,19 @@ header {
     padding: 10px;
     text-align: center; }
   .attention span:first-of-type {
+    display: none;
     width: 200px;
-    background: #35cc68; }
+    background: #33cc66; }
   .attention span:last-of-type {
     width: 100px;
     margin-left: -6px;
-    background: #339967; }
+    background: #339966; }
   .attention span:hover {
     background: red; }
 
 .about {
-  padding-top: 36px; }
+  padding-top: 36px;
+  display: none; }
   .about .title {
     font-family: "BebaeNeue";
     font-size: 2.5em;
@@ -649,12 +751,62 @@ header {
     height: 96px;
     width: 800px;
     border-bottom: solid 1px rgba(0, 0, 0, 0.3); }
+  .about h3 {
+    font-family: "BebaeNeue"; }
+  .about .skills,
+  .about .who {
+    float: left;
+    display: block;
+    width: 442px;
+    height: 190px;
+    padding: 25px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    visibility: hidden; }
+  .about .team {
+    clear: both;
+    padding: 10px 25px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box; }
+    .about .team h3 {
+      font-size: 1.5em;
+      margin: 0; }
+    .about .team .eric, .about .team .denis {
+      width: 50%;
+      height: 140px;
+      float: left; }
+
+.contact {
+  display: none;
+  padding-top: 36px; }
+  .contact .contact-us {
+    height: 96px;
+    width: 800px;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.3); }
+  .contact .title {
+    font-family: "BebaeNeue";
+    font-size: 2.5em;
+    text-align: center;
+    margin-bottom: 0; }
+  .contact .detail {
+    text-align: center;
+    color: white; }
 
 footer {
-  background: #35cc68;
+  background: #33cc66;
   padding-left: 100px; }
   footer .content {
     display: inline-block; }
+    footer .content a {
+      text-decoration: none; }
+      footer .content a:visited, footer .content a:active {
+        color: inherit; }
 
 @media screen and (min-width: 1025px) {
   main.container {
